--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width-device-width , initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title></title>
+        <title>Excursion</title>
+        <link rel="stylesheet" type="text/CSS" href="resources/CSS/style.css">
     </head>
+    <body>
+        <h1>Discover hidden place in the world around you</h1>
+        <p><a href="#">Download Excursion (Coming Soon!)</a></p>
+    </body>
 </html>
