add next heading and represtive style

--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
         <video autoplay loop> 
             <source src="/resources/vedio/excursion.mp4" type="video/mp4">
         </video>
+        <h2 class="header--secondary">You personal travel guide</h2>
+        <h4 class="header--subheader">Excursion remembers the places you likes, and recommendes new points of interest around you.</h4>
     </body>
 </html>
